--- a/src/components/listaDeTapiocas/styles.css
+++ b/src/components/listaDeTapiocas/styles.css
@@ -9,7 +9,7 @@
     padding: 1.8rem;;
     text-decoration: none;
     border-bottom: 1px solid lightgray;
-    width: 500px;
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
