--- a/src/pages/listaDeTapiocas/styles.css
+++ b/src/pages/listaDeTapiocas/styles.css
@@ -22,3 +22,11 @@
 .texto-primario{
     flex-grow: 1;
 }
+
+footer {
+    width: 100%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: fixed;
+}
